--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,12 @@
   </head>
 
   <body>
+  <% if current_user %>
+    <%= button_to "Log Out", destroy_user_session_path, method: :delete %>
+  <% else %>
+    <%= button_to "Log In", new_user_session_path %>
 
+  <% end %>
   <%= render partial: 'layouts/flash_notices' %>
   
     <%= yield %>
